--- a/cargo.toml
+++ b/cargo.toml
@@ -5,7 +5,9 @@ edition = "2021"
 publish = false
 
 [dependencies]
+cqrs-es = "0.4.2"
 axum = "0.6.4"
+rusty-money = "0.4.1"
 hyper = { version = "0.14", features = ["full"] }
 mime = "0.3"
 serde_json = "1.0"
