--- a/cargo.toml
+++ b/cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rechnung"
-version = "0.0.1"
+version = "0.1.0"
 edition = "2021"
 publish = false
 
@@ -15,6 +15,7 @@ tokio = { version = "1.0", features = ["full"] }
 tower-http = { version = "0.4.0", features = ["trace"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+chrono = "0.4.24"
 
 [dev-dependencies]
 tower = { version = "0.4", features = ["util"] }
